# inzynierka-mini-projekt

./: .gitignore  .pre-commit-config.yaml  README.md  godot_pipe_recv.txt  godot_pipe_send.txt  godot_socket_recv.txt  godot_socket_send.txt  pyproject.toml  python_pipe_recv.txt  python_pipe_send.txt  python_socket_recv.txt  python_socket_send.txt
.github/workflows/: linters.yaml  python-setup.yaml  ruff.yaml
core/: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt  settings.yaml
core/src/: SocketServerThread.py  main.py  server.py  settings.py  setup.py  showing_stats.py  socket_server_thread.py  temp_main.py
core/src/agents/: agent.py  pong_agent.py  pong_policy.py  trainable_agent.py
core/src/environments/: environment.py  gymnasium_environment.py  server_environment.py
core/src/pipe_handler/: pipe_handler.py
core/src/policies/: policy_network.py  pong_policy_network.py
core/src/utils/: godot_handler.py  training_handler.py
engine/: .gitignore  Ping-Pong.csproj  Ping-Pong.sln  README.md  icon.svg.import  project.godot
engine/src/: config.yaml
engine/src/scenes/: ball.tscn  main.tscn  paddle.tscn  scoreArea.tscn  scoreboard.tscn
engine/src/scripts/agent/: Agent.cs
engine/src/scripts/ball/: Ball.cs
engine/src/scripts/client/: client.cs
engine/src/scripts/commandLineReader/: CommandLineReader.cs
engine/src/scripts/config/: Config.cs
engine/src/scripts/endOfFrameProcessor/: EndOfFrameProcessor.cs
engine/src/scripts/event/: Event.cs
engine/src/scripts/eventManager/: EventManager.cs
engine/src/scripts/model/: Model.cs
(+29 files in other folders)
